tests/sumo/errors/invalid_color/errors.sumo
Error: Attribute 'color' in definition of vType 'color_test' Invalid color definition '1 2 3 4 5'.
Quitting (on error).
